build_log.txt

> Configure project :app
WARNING: The option setting 'android.usesSdkInManifest.disallowed=false' is deprecated.
The current default is 'true'.
It will be removed in version 10.0 of the Android Gradle plugin.
WARNING: The option setting 'android.sdk.defaultTargetSdkToCompileSdkIfUnset=false' is deprecated.
The current default is 'true'.
It will be removed in version 10.0 of the Android Gradle plugin.
WARNING: The option setting 'android.enableAppCompileTimeRClass=false' is deprecated.
The current default is 'true'.
It will be removed in version 10.0 of the Android Gradle plugin.
WARNING: The option setting 'android.builtInKotlin=false' is deprecated.
The current default is 'true'.
It will be removed in version 10.0 of the Android Gradle plugin.
WARNING: The option setting 'android.newDsl=false' is deprecated.
The current default is 'true'.
It will be removed in version 10.0 of the Android Gradle plugin.
WARNING: The option setting 'android.r8.optimizedResourceShrinking=false' is deprecated.
The current default is 'true'.
It will be removed in version 10.0 of the Android Gradle plugin.
WARNING: The option setting 'android.defaults.buildfeatures.resvalues=true' is deprecated.
The current default is 'false'.
It will be removed in version 10.0 of the Android Gradle plugin.
WARNING: The property android.dependency.excludeLibraryComponentsFromConstraints improves project import performance for very large projects. It should be enabled to improve performance.
To suppress this warning, add android.generateSyncIssueWhenLibraryConstraintsAreEnabled=false to gradle.properties
WARNING: The property android.dependency.excludeLibraryComponentsFromConstraints improves project import performance for very large projects. It should be enabled to improve performance.
To suppress this warning, add android.generateSyncIssueWhenLibraryConstraintsAreEnabled=false to gradle.properties
WARNING: The property android.dependency.excludeLibraryComponentsFromConstraints improves project import performance for very large projects. It should be enabled to improve performance.
To suppress this warning, add android.generateSyncIssueWhenLibraryConstraintsAreEnabled=false to gradle.properties
WARNING: The property android.dependency.excludeLibraryComponentsFromConstraints improves project import performance for very large projects. It should be enabled to improve performance.
To suppress this warning, add android.generateSyncIssueWhenLibraryConstraintsAreEnabled=false to gradle.properties

> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:compileDebugAidl UP-TO-DATE
> Task :app:checkKotlinGradlePluginConfigurationErrors SKIPPED
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE
> Task :app:compileDebugKotlin NO-SOURCE
> Task :app:javaPreCompileDebug UP-TO-DATE

> Task :app:compileDebugJavaWithJavac FAILED
D:\@MIS PROYECTOS\OpenRadioFM\app\src\main\java\com\example\openradiofm\ui\main\MainActivity.java:1164: error: cannot find symbol
        if (mLastFreq != -1) {
            ^
  symbol:   variable mLastFreq
  location: class MainActivity
D:\@MIS PROYECTOS\OpenRadioFM\app\src\main\java\com\example\openradiofm\ui\main\MainActivity.java:1165: error: cannot find symbol
            runOnUiThread(() -> updateFrequencyDisplay(mLastFreq));
                                                       ^
  symbol:   variable mLastFreq
  location: class MainActivity
D:\@MIS PROYECTOS\OpenRadioFM\app\src\main\java\com\example\openradiofm\ui\main\MainActivity.java:1190: error: cannot find symbol
            if (freq != mLastFreq) {
                        ^
  symbol:   variable mLastFreq
  location: class MainActivity
D:\@MIS PROYECTOS\OpenRadioFM\app\src\main\java\com\example\openradiofm\ui\main\MainActivity.java:1191: error: cannot find symbol
                mLastFreq = freq;
                ^
  symbol:   variable mLastFreq
  location: class MainActivity
D:\@MIS PROYECTOS\OpenRadioFM\app\src\main\java\com\example\openradiofm\ui\main\MainActivity.java:1234: error: cannot find symbol
                        tvPty.setText(s.getPty() != null ? s.getPty() : "RDS NONE");
                                       ^
  symbol:   method getPty()
  location: variable s of type IRadioServiceAPI
D:\@MIS PROYECTOS\OpenRadioFM\app\src\main\java\com\example\openradiofm\ui\main\MainActivity.java:1234: error: cannot find symbol
                        tvPty.setText(s.getPty() != null ? s.getPty() : "RDS NONE");
                                                            ^
  symbol:   method getPty()
  location: variable s of type IRadioServiceAPI
D:\@MIS PROYECTOS\OpenRadioFM\app\src\main\java\com\example\openradiofm\ui\main\MainActivity.java:1819: error: cannot find symbol
        int currentFreq = mLastFreq;
                          ^
  symbol:   variable mLastFreq
  location: class MainActivity
D:\@MIS PROYECTOS\OpenRadioFM\app\src\main\java\com\example\openradiofm\ui\main\MainActivity.java:1868: error: cannot find symbol
        int currentFreq = mLastFreq;
                          ^
  symbol:   variable mLastFreq
  location: class MainActivity
Note: D:\@MIS PROYECTOS\OpenRadioFM\app\src\main\java\com\example\openradiofm\ui\main\MainActivity.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
8 errors

[Incubating] Problems report is available at: file:///D:/@MIS%20PROYECTOS/OpenRadioFM/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  Note: D:\@MIS PROYECTOS\OpenRadioFM\app\src\main\java\com\example\openradiofm\ui\main\MainActivity.java uses or overrides a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  D:\@MIS PROYECTOS\OpenRadioFM\app\src\main\java\com\example\openradiofm\ui\main\MainActivity.java:1164: error: cannot find symbol
          if (mLastFreq != -1) {
              ^
    symbol:   variable mLastFreq
    location: class MainActivity
  D:\@MIS PROYECTOS\OpenRadioFM\app\src\main\java\com\example\openradiofm\ui\main\MainActivity.java:1165: error: cannot find symbol
              runOnUiThread(() -> updateFrequencyDisplay(mLastFreq));
                                                         ^
    symbol:   variable mLastFreq
    location: class MainActivity
  D:\@MIS PROYECTOS\OpenRadioFM\app\src\main\java\com\example\openradiofm\ui\main\MainActivity.java:1190: error: cannot find symbol
              if (freq != mLastFreq) {
                          ^
    symbol:   variable mLastFreq
    location: class MainActivity
  D:\@MIS PROYECTOS\OpenRadioFM\app\src\main\java\com\example\openradiofm\ui\main\MainActivity.java:1191: error: cannot find symbol
                  mLastFreq = freq;
                  ^
    symbol:   variable mLastFreq
    location: class MainActivity
  D:\@MIS PROYECTOS\OpenRadioFM\app\src\main\java\com\example\openradiofm\ui\main\MainActivity.java:1819: error: cannot find symbol
          int currentFreq = mLastFreq;
                            ^
    symbol:   variable mLastFreq
    location: class MainActivity
  D:\@MIS PROYECTOS\OpenRadioFM\app\src\main\java\com\example\openradiofm\ui\main\MainActivity.java:1868: error: cannot find symbol
          int currentFreq = mLastFreq;
                            ^
    symbol:   variable mLastFreq
    location: class MainActivity
  D:\@MIS PROYECTOS\OpenRadioFM\app\src\main\java\com\example\openradiofm\ui\main\MainActivity.java:1234: error: cannot find symbol
                          tvPty.setText(s.getPty() != null ? s.getPty() : "RDS NONE");
                                         ^
    symbol:   method getPty()
    location: variable s of type IRadioServiceAPI
  D:\@MIS PROYECTOS\OpenRadioFM\app\src\main\java\com\example\openradiofm\ui\main\MainActivity.java:1234: error: cannot find symbol
                          tvPty.setText(s.getPty() != null ? s.getPty() : "RDS NONE");
                                                              ^
    symbol:   method getPty()
    location: variable s of type IRadioServiceAPI
  8 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

BUILD FAILED in 4s
18 actionable tasks: 1 executed, 17 up-to-date
